force-app/main/default/objects/Opportunity/fields/Agent_Broker__c.field-meta.xml
<CustomField>
    <fullName>Agent_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent / Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agent / Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>