force-app/main/default/objects/Opportunity/fields/Bank_charges__c.field-meta.xml
<CustomField>
    <fullName>Bank_charges__c</fullName>
    <label>Bank charges</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>