force-app/main/default/objects/Opportunity/fields/Benchmark_Price__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Price__c</fullName>
    <label>Benchmark Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>