force-app/main/default/objects/Opportunity/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Buyer)</relationshipLabel>
    <relationshipName>Sale_Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>