force-app/main/default/objects/Opportunity/fields/Buyer_Company__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Company__c</fullName>
    <formula>Owner.CompanyName + &#39; - &#39; +  Owner.FirstName + &#39; &#39; +  Owner.LastName</formula>
    <label>Buyer / Seller</label>
    <type>Text</type>
</CustomField>