force-app/main/default/objects/Opportunity/fields/Buyer_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Purchase__c</fullName>
    <defaultValue>$User.Alias</defaultValue>
    <label>Buyer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>