force-app/main/default/objects/Opportunity/fields/Commission_Brokerage_Fees__c.field-meta.xml
<CustomField>
    <fullName>Commission_Brokerage_Fees__c</fullName>
    <label>Commission / Brokerage Fees</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>