force-app/main/default/objects/Opportunity/fields/Contract_Email_Validator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Email_Validator__c</fullName>
    <label>Contract Email Validator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>