force-app/main/default/objects/Opportunity/fields/Country_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Loading__c</fullName>
    <label>Country of Loading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>BULGARIA</fullName>
            </value>
            <value>
                <fullName>CAMEROON</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CHILE</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>COSTA RICA</fullName>
            </value>
            <value>
                <fullName>CYPRUS</fullName>
            </value>
            <value>
                <fullName>CZECH REPUBLIC</fullName>
            </value>
            <value>
                <fullName>DALIAN CHINA</fullName>
            </value>
            <value>
                <fullName>DEMOCRATIC REPUBLIC OF THE CONGO</fullName>
            </value>
            <value>
                <fullName>EGYPT</fullName>
            </value>
            <value>
                <fullName>ESTONIA</fullName>
            </value>
            <value>
                <fullName>FINLAND</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>GABON</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>GREECE</fullName>
            </value>
            <value>
                <fullName>GUATEMALA</fullName>
            </value>
            <value>
                <fullName>GUINEA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDONESIA</fullName>
            </value>
            <value>
                <fullName>IRAN</fullName>
            </value>
            <value>
                <fullName>ISRAEL</fullName>
            </value>
            <value>
                <fullName>ITALY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>