force-app/main/default/objects/Opportunity/fields/Customer_Contract_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_Reference_No__c</fullName>
    <label>Customer Contract Reference No</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>