force-app/main/default/objects/Opportunity/fields/Customer_Contract_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_Reference_Number__c</fullName>
    <label>Customer Contract Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>