force-app/main/default/objects/Opportunity/fields/End_Shipping_Period__c.field-meta.xml
<CustomField>
    <fullName>End_Shipping_Period__c</fullName>
    <label>End Shipping Period</label>
    <required>true</required>
    <type>Date</type>
</CustomField>