force-app/main/default/objects/Opportunity/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <label>External Reference No</label>
    <length>225</length>
    <type>Text</type>
</CustomField>