force-app/main/default/objects/Opportunity/fields/Factory_2nd_Opt__c.field-meta.xml
<CustomField>
    <fullName>Factory_2nd_Opt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factory (2nd Opt)</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Trades (Factory (2nd Opt))</relationshipLabel>
    <relationshipName>Trades</relationshipName>
    <type>Lookup</type>
</CustomField>