force-app/main/default/objects/Opportunity/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Factory</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>