force-app/main/default/objects/Opportunity/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <formula>IF(Exchange_Rate__c  &gt; 0, (  Contract_Value__c   /  Exchange_Rate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Value (USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>