force-app/main/default/objects/Opportunity/fields/Financing__c.field-meta.xml
<CustomField>
    <fullName>Financing__c</fullName>
    <label>Financing</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>