force-app/main/default/objects/Opportunity/fields/FOB_Price__c.field-meta.xml
<CustomField>
    <fullName>FOB_Price__c</fullName>
    <formula>Price__c - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FOB Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>