force-app/main/default/objects/Opportunity/fields/Foreign_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Exchange__c</fullName>
    <label>Foreign Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD/MYR</fullName>
            </value>
            <value>
                <fullName>USD/SGD</fullName>
            </value>
            <value>
                <fullName>USD/IDR</fullName>
            </value>
            <value>
                <fullName>USD/EUR</fullName>
            </value>
            <value>
                <fullName>USD/YEN</fullName>
            </value>
            <value>
                <fullName>USD/RMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>