force-app/main/default/objects/Opportunity/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Rubber Grade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADS XL</fullName>
            </value>
            <value>
                <fullName>AFR10</fullName>
            </value>
            <value>
                <fullName>AFR5</fullName>
            </value>
            <value>
                <fullName>AFR L</fullName>
            </value>
            <value>
                <fullName>CBR 1066</fullName>
            </value>
            <value>
                <fullName>CBR 1240</fullName>
            </value>
            <value>
                <fullName>CHC10</fullName>
            </value>
            <value>
                <fullName>ENR</fullName>
            </value>
            <value>
                <fullName>EVA 1066</fullName>
            </value>
            <value>
                <fullName>INR10</fullName>
            </value>
            <value>
                <fullName>ISNR20</fullName>
            </value>
            <value>
                <fullName>LAC10</fullName>
            </value>
            <value>
                <fullName>LATEX HA</fullName>
            </value>
            <value>
                <fullName>LATEX LA</fullName>
            </value>
            <value>
                <fullName>RSS1</fullName>
            </value>
            <value>
                <fullName>RSS3</fullName>
            </value>
            <value>
                <fullName>RSS3 SICOM</fullName>
            </value>
            <value>
                <fullName>RSS3 TOCOM</fullName>
            </value>
            <value>
                <fullName>RSS4</fullName>
            </value>
            <value>
                <fullName>RSS5</fullName>
            </value>
            <value>
                <fullName>RSS CUTTING</fullName>
            </value>
            <value>
                <fullName>SBR 1502</fullName>
            </value>
            <value>
                <fullName>SBR 1712</fullName>
            </value>
            <value>
                <fullName>SCR5 SHFE</fullName>
            </value>
            <value>
                <fullName>SGR10</fullName>
            </value>
            <value>
                <fullName>SHFE SCR5</fullName>
            </value>
            <value>
                <fullName>SIR10</fullName>
            </value>
            <value>
                <fullName>SIR 10 Mixture Rubber</fullName>
            </value>
            <value>
                <fullName>SIR10 VK</fullName>
            </value>
            <value>
                <fullName>SIR20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>