force-app/main/default/objects/Opportunity/fields/Is_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent to Contract Team</label>
    <type>Checkbox</type>
</CustomField>