force-app/main/default/objects/Opportunity/fields/ISPM_15__c.field-meta.xml
<CustomField>
    <fullName>ISPM_15__c</fullName>
    <label>ISPM#15</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>