force-app/main/default/objects/Opportunity/fields/Logistics__c.field-meta.xml
<CustomField>
    <fullName>Logistics__c</fullName>
    <label>Logistics</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>