force-app/main/default/objects/Opportunity/fields/Mosquito_Certification__c.field-meta.xml
<CustomField>
    <fullName>Mosquito_Certification__c</fullName>
    <label>Mosquito Certification</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>