force-app/main/default/objects/Opportunity/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <label>Packing</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shrinkwrapped</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Disposable Plastic Pallet</fullName>
            </value>
            <value>
                <fullName>Disposal Metal Pallet</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Flexi Bag</fullName>
            </value>
            <value>
                <fullName>Friendly Pack</fullName>
            </value>
            <value>
                <fullName>Great Wall</fullName>
            </value>
            <value>
                <fullName>Loose Bale</fullName>
            </value>
            <value>
                <fullName>Metal Box</fullName>
            </value>
            <value>
                <fullName>Slip Tray</fullName>
            </value>
            <value>
                <fullName>Tank Container</fullName>
            </value>
            <value>
                <fullName>Wooden Crate</fullName>
            </value>
            <value>
                <fullName>Wooden Pallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>