force-app/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Against Documents</fullName>
            </value>
            <value>
                <fullName>TT Against Faxed Copy Dcuments</fullName>
            </value>
            <value>
                <fullName>LC at Sight</fullName>
            </value>
            <value>
                <fullName>TT 90 Days from BL Date</fullName>
            </value>
            <value>
                <fullName>CAD within 5 Working Days</fullName>
            </value>
            <value>
                <fullName>TT 30 Days from BL Date</fullName>
            </value>
            <value>
                <fullName>10% Prepayment; 90% by DP Sight through Bank</fullName>
            </value>
            <value>
                <fullName>10% Prepayment; 90% TT upon arrival of Shipment</fullName>
            </value>
            <value>
                <fullName>20% Prepayment, 80% Against Faxed Copy  Documents</fullName>
            </value>
            <value>
                <fullName>20% prepayment, 80% upon receipt of Origional Documents</fullName>
            </value>
            <value>
                <fullName>20% Prepayment; 80% Balance 1 Week before vessel arrival</fullName>
            </value>
            <value>
                <fullName>30% against documents, Balance on Arrival</fullName>
            </value>
            <value>
                <fullName>30% Against presentation of Original Documents; Balance upon arrival,Weight/DRC</fullName>
            </value>
            <value>
                <fullName>30% Prepyt Upon Cont Date, 70% TT against Faxed Documents</fullName>
            </value>
            <value>
                <fullName>50% Against Documents, Balance due at Delivery</fullName>
            </value>
            <value>
                <fullName>50% in Advance; Bal 50% against faxed documents</fullName>
            </value>
            <value>
                <fullName>70% in Advance Against Faxed Copy Docus, 30%  After Goods Received</fullName>
            </value>
            <value>
                <fullName>100% Prepayment prompt after contract Date</fullName>
            </value>
            <value>
                <fullName>100% Prepayment 1 Week before Shipment</fullName>
            </value>
            <value>
                <fullName>Advance Payment  (TT in Advance)</fullName>
            </value>
            <value>
                <fullName>CAD upon Vessel Arrival</fullName>
            </value>
            <value>
                <fullName>CAD within  3 Days</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents  7 Days</fullName>
            </value>
            <value>
                <fullName>DAP 90 Days from BL Date</fullName>
            </value>
            <value>
                <fullName>DP at Sight</fullName>
            </value>
            <value>
                <fullName>LC 60 Days from BL Date</fullName>
            </value>
            <value>
                <fullName>LC 90 Days from BL Date</fullName>
            </value>
            <value>
                <fullName>LC Sight Within 5 Working Days After Contract Date</fullName>
            </value>
            <value>
                <fullName>Prompt Payment</fullName>
            </value>
            <value>
                <fullName>Telex Release Original BL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>