force-app/main/default/objects/Opportunity/fields/Phytosanitary_Certification__c.field-meta.xml
<CustomField>
    <fullName>Phytosanitary_Certification__c</fullName>
    <label>Phytosanitary Certification</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>