force-app/main/default/objects/Opportunity/fields/Plywood__c.field-meta.xml
<CustomField>
    <fullName>Plywood__c</fullName>
    <label>Plywood</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>