force-app/main/default/objects/Opportunity/fields/Port_of_Loading_1st_Opt__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading_1st_Opt__c</fullName>
    <label>Loading Port (1st Opt)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_of_Loading__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABIDJAN</fullName>
            </value>
            <value>
                <fullName>ACHIM</fullName>
            </value>
            <value>
                <fullName>ALEXANDRIA</fullName>
            </value>
            <value>
                <fullName>ALGECIRAS</fullName>
            </value>
            <value>
                <fullName>ALICANTE</fullName>
            </value>
            <value>
                <fullName>AMBARLI</fullName>
            </value>
            <value>
                <fullName>AMSTERDAM</fullName>
            </value>
            <value>
                <fullName>ANCONA</fullName>
            </value>
            <value>
                <fullName>ANTWERP</fullName>
            </value>
            <value>
                <fullName>APAPA</fullName>
            </value>
            <value>
                <fullName>ARGENTINA MAIN PORTS</fullName>
            </value>
            <value>
                <fullName>AUBANGE</fullName>
            </value>
            <value>
                <fullName>BANDAR ABBAS</fullName>
            </value>
            <value>
                <fullName>BANGKOK</fullName>
            </value>
            <value>
                <fullName>BANJARMASIN</fullName>
            </value>
            <value>
                <fullName>BARCELONA</fullName>
            </value>
            <value>
                <fullName>BEKASI</fullName>
            </value>
            <value>
                <fullName>BELAWAN</fullName>
            </value>
            <value>
                <fullName>BELFAST</fullName>
            </value>
            <value>
                <fullName>BENEVENT-L&#39;ABBAYE</fullName>
            </value>
            <value>
                <fullName>BENGKULU</fullName>
            </value>
            <value>
                <fullName>BILBAO</fullName>
            </value>
            <value>
                <fullName>BRAZIL MAIN PORTS</fullName>
            </value>
            <value>
                <fullName>BREMEN</fullName>
            </value>
            <value>
                <fullName>BREMERHAVEN</fullName>
            </value>
            <value>
                <fullName>BRIGNANCOURT</fullName>
            </value>
            <value>
                <fullName>BRISBANE</fullName>
            </value>
            <value>
                <fullName>BUENAVENTURA</fullName>
            </value>
            <value>
                <fullName>BUENOS AIRES</fullName>
            </value>
            <value>
                <fullName>BUSAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>