force-app/main/default/objects/Opportunity/fields/Port_of_Loading_2nd_Opt__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading_2nd_Opt__c</fullName>
    <label>Loading Port (2nd Opt)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_of_Loading__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Port_of_Loading_Destination</valueSetName>
    </valueSet>
</CustomField>